# lingolift-shared

./: .gitignore  .pre-commit-config.yaml  do  pyproject.toml
shared/: client.py  exception.py  rendering.py  universal_features.py
shared/model/: inflection.py  syntactical_analysis.py
shared/model/token/: feature.py  mapper.py  token.py  upos.py
test/: coverage.xml  smoke_test.py  test_client.py  test_rendering.py  test_token_mapper.py
test/model/token/: test_feature.py  test_token.py  test_token_mapper.py
