[tool.poetry]
name = "shared"
version = "0.5.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pydantic = "^2.5.3"
emoji = "^2.9.0"
boto3 = "^1.34.25"
aiohttp = "^3.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.3"
aioresponses = "^0.7.6"
coverage-badge = "^1.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4.4"
addopts = "-s -v --disable-warnings --ignore=test/smoke_test.py"
testpaths = [
    "test",
]

[tool.mypy]
python_version = "3.9"
packages="shared"
check_untyped_defs=true
disallow_untyped_defs=true
disallow_incomplete_defs=true
disallow_untyped_decorators=true
no_implicit_optional=true
implicit_reexport=true
warn_return_any=true
warn_unreachable=true
strict_equality=true
strict=true
show_error_context=true
explicit_package_bases=true
pretty=true