[tool.poetry]
name = "shared"
version = "0.6.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
emoji = "^2.9.0"
boto3 = "^1.34.25"
aiohttp = "^3.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.3"
aioresponses = "^0.7.6"
coverage-badge = "^1.1.1"

# Add optional spaCy dependency for testing purposes
[tool.poetry.group.nlp]
optional = true

[tool.poetry.group.nlp.dependencies]
spacy = "^3.7.5"
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0.tar.gz" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4.4"
addopts = "-s -v --disable-warnings --ignore=test/smoke_test.py"
testpaths = [
    "test",
]
